# USBComposite-mbed

./: CMakeLists.txt
cdc/: USBCompositeCDCSubDevice.cpp  USBCompositeCDCSubDevice.h  USBCompositeSerialSubDevice.cpp  USBCompositeSerialSubDevice.h
core/: USBComposite.cpp  USBComposite.h  USBCompositeSubDevice.h
hid/: USBCompositeHIDKeyboardSubDevice.cpp  USBCompositeHIDKeyboardSubDevice.h  USBCompositeHIDSubDevice.cpp  USBCompositeHIDSubDevice.h
